--- a/plugins/mvn-properties/mvn-properties-test-usage/pom.xml
+++ b/plugins/mvn-properties/mvn-properties-test-usage/pom.xml
@@ -36,12 +36,9 @@ If Maven-test is used, the values of the system properties are verified in the J
 					</execution>
 				</executions>
 				<configuration>
-					<filePaths>
-						<filePath>test-versions.properties</filePath>
-					</filePaths>
-					<files>
-						<file>test-versions.properties</file>
-					</files>
+					<resourceNames>
+						<resourceName>test-versions.properties</resourceName>	
+					</resourceNames>
 				</configuration>
 				<!-- Any artifacts (JARs) hosting the above properties -->
 				<dependencies>
