--- a/plugins/mvn-properties/mvn-properties-maven-plugin/pom.xml
+++ b/plugins/mvn-properties/mvn-properties-maven-plugin/pom.xml
@@ -43,11 +43,11 @@
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>de.dbo.tools.utils</groupId>
-			<artifactId>print</artifactId>
-			<scope>test</scope>
-		</dependency>
+			<dependency>
+				<groupId>de.dbo.tools</groupId>
+				<artifactId>print</artifactId>
+				<scope>test</scope>
+			</dependency>
 	</dependencies>
 
 </project>
