--- a/plugins/mvn-properties/mvn-properties-test-usage/pom.xml
+++ b/plugins/mvn-properties/mvn-properties-test-usage/pom.xml
@@ -99,10 +99,10 @@ If Maven-test is used, the values of the system properties are verified in the J
 	</build>
 
 	<dependencies>
-		<dependency>
-			<groupId>de.dbo.tools.utils</groupId>
-			<artifactId>print</artifactId>
-		</dependency>
+			<dependency>
+				<groupId>de.dbo.tools</groupId>
+				<artifactId>print</artifactId>
+			</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
