--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -5,6 +5,7 @@
     <groupId>de.dbo.mvn</groupId>
     <artifactId>mvn</artifactId>
     <version>0.0.0-SNAPSHOT</version>
+    <relativePath></relativePath>
   </parent>
   
   <artifactId>plugins</artifactId>
