pom-structure correction

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -2,12 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
-    <groupId>de.dbo.mvn</groupId>
-    <artifactId>mvn</artifactId>
+    <groupId>de.dbo</groupId>
+    <artifactId>root</artifactId>
     <version>0.0.0-SNAPSHOT</version>
     <relativePath></relativePath>
   </parent>
   
+  <groupId>de.dbo.mvn</groupId>
   <artifactId>plugins</artifactId>
   <packaging>pom</packaging>
   <name>Maven Plugins</name>
