--- a/plugins/mvn-properties/mvn-properties-test-usage/pom.xml
+++ b/plugins/mvn-properties/mvn-properties-test-usage/pom.xml
@@ -40,7 +40,7 @@ If Maven-test is used, the values of the system properties are verified in the J
 						<resourceName>versions.properties</resourceName>	
 					</resourceNames>
 				</configuration>
-				<!-- Any artifacts (JARs) hosting the above properties -->
+				<!-- Any artifacts (JARs) hosting the declared above properties -->
 				<dependencies>
  				<dependency>
 						<groupId>de.dbo</groupId>
@@ -50,7 +50,7 @@ If Maven-test is used, the values of the system properties are verified in the J
 				</dependencies>
 			</plugin>
 
-			<!-- For test-purposes: values of maven-variables as system properties -->
+			<!--Test: set maven-properties as system properties -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>properties-maven-plugin</artifactId>
@@ -76,7 +76,7 @@ If Maven-test is used, the values of the system properties are verified in the J
 				</executions>
 			</plugin>
 			
-			<!-- For test-purposes: to display maven-variables as echo -->
+			<!-- Test: show maven-properties as ant-echo -->
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
@@ -86,7 +86,7 @@ If Maven-test is used, the values of the system properties are verified in the J
 							<goal>run</goal>
 						</goals>
 						<configuration>
-							<!-- Display required project properties -->
+							<!-- Display test-properties -->
 							<tasks>
 								<echo>dbo.version=${dbo.version}</echo>
 								<echo>mysql.version=${mysql.version}</echo>
