--- a/plugins/mvn-properties/mvn-properties-maven-plugin/pom.xml
+++ b/plugins/mvn-properties/mvn-properties-maven-plugin/pom.xml
@@ -38,7 +38,7 @@
 
 		<!-- required properties packed as an artifact -->
 		<dependency>
-			<groupId>de.dbo</groupId>
+			<groupId>de.dbo.root</groupId>
 			<artifactId>versions</artifactId>
 			<version>0.0.0-SNAPSHOT</version>
 			<scope>test</scope>
