--- a/plugins/mvn-properties/mvn-properties-test-usage-parent/pom.xml
+++ b/plugins/mvn-properties/mvn-properties-test-usage-parent/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>de.dbo.mvn.test</groupId>
 	<artifactId>mvn-properties-test-usage-parent</artifactId>
 	<packaging>pom</packaging>
-	<name>MVN Plugins - Properties Test-Usage Parent</name>
+	<name>MVN Plugins - Properties Test-Usage parent</name>
 	<description>
 
 	</description>
@@ -40,7 +40,7 @@
 				<!-- Any artifacts (JARs) hosting the declared above properties -->
 				<dependencies>
 					<dependency>
-						<groupId>de.dbo</groupId>
+						<groupId>de.dbo.root</groupId>
 						<artifactId>versions</artifactId>
 						<version>0.0.0-SNAPSHOT</version>
 					</dependency>
