--- a/mvn-plugins/mvn-properties/pom.xml
+++ b/mvn-plugins/mvn-properties/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<groupId>de.dbo.mvn</groupId>
-		<artifactId>plugins</artifactId>
+		<artifactId>mvn-plugins</artifactId>
 		<version>0.0.0-SNAPSHOT</version>
 	</parent>
 
