--- a/mvn-plugins/mvn-properties/mvn-properties-maven-plugin/pom.xml
+++ b/mvn-plugins/mvn-properties/mvn-properties-maven-plugin/pom.xml
@@ -7,13 +7,13 @@
 		<artifactId>mvn-properties</artifactId>
 		<version>0.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>mvn-properties-maven-plugin</artifactId>
-	<packaging>maven-plugin</packaging>
-	
 	
 	<name>MVN Plugins - Properties Plugin</name>
 	<url></url>
-
+	
+	<artifactId>mvn-properties-maven-plugin</artifactId>
+	<packaging>maven-plugin</packaging>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
@@ -37,13 +37,14 @@
 			<artifactId>plexus-utils</artifactId>
 		</dependency>
 
-		<!-- required properties packed as an artifact -->
+		<!-- Properties packed as an artifact -->
 		<dependency>
 			<groupId>de.dbo.root</groupId>
 			<artifactId>versions</artifactId>
 			<version>0.0.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>de.dbo.tools</groupId>
 			<artifactId>print</artifactId>
