--- a/mvn-plugins/pom.xml
+++ b/mvn-plugins/pom.xml
@@ -7,13 +7,13 @@
     <version>0.0.0-SNAPSHOT</version>
     <relativePath></relativePath>
   </parent>
+  
   <groupId>de.dbo.mvn</groupId>
   <artifactId>mvn-plugins</artifactId>
   <packaging>pom</packaging>
   
-  
   <name>MVN Plugins</name>
-  <description>Maven Plug-ins</description>
+  <description>Maven Custom Plug-ins</description>
   
   <modules>
   	<module>mvn-properties</module>
