--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
+	<name>MVN Plugins Installer</name>
+	<description>
+Reactor-project to installation all mvn-modules (custom Maven plug-ins)
+	</description>
+	
 	<groupId>de.dbo.mvn</groupId>
 	<artifactId>mvn-reactor</artifactId>
 	<version>0.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>MVN Plugins Installer</name>
-	
-	
-	<description>
-Installation of mvn-modules
-	</description>
 	
     <modules>
     	<module>mvn-plugins</module>
