--- a/mvn-plugins/pom.xml
+++ b/mvn-plugins/pom.xml
@@ -5,7 +5,7 @@
     <groupId>de.dbo.root</groupId>
     <artifactId>root</artifactId>
     <version>0.0.0-SNAPSHOT</version>
-    <relativePath></relativePath>
+    <relativePath/>
   </parent>
   
   <groupId>de.dbo.mvn</groupId>
