--- a/mvn-plugins/mvn-properties/mvn-properties-maven-plugin/pom.xml
+++ b/mvn-plugins/mvn-properties/mvn-properties-maven-plugin/pom.xml
@@ -45,6 +45,14 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!-- Only for JUnit -->
+		<dependency>
+			<groupId>de.dbo.tools</groupId>
+			<artifactId>print</artifactId>
+			<version>0.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 </project>
